# colonysim

./: .clang-format  .gitignore  CMakeLists.txt  ColonySim.code-workspace  README.md  SETUP_GUIDE.md  vcpkg.json
.github/: copilot-instructions.md
config/: game_config.json  input_config.json
docs/: ChunkedWorldImplementation.md  LayeringSystem.md  WorldGeneration.md
docs/World Generation/: IMPLEMENTATION_STATUS.md  PlateTectonicsIntegrationPlan.md  TECHNICAL_DECISIONS.md  TECTONIC_MIGRATION_REALITY_CHECK.md  mountain_formation_implementation.md
docs/World Generation/code/include/WorldGen/Core/Climate/: AtmosphericCirculation.h  SnowAndGlacierCalculator.h
docs/World Generation/code/include/WorldGen/Renderer/: BiomeVisualizer.h
docs/World Generation/code/src/Core/Climate/: AtmosphericCirculation.cpp  SnowAndGlacierCalculator.cpp
docs/World Generation/code/src/Core/TectonicPlates/: PlateGenerator.cpp  TectonicPlate.cpp
docs/World Generation/code/src/Core/Terrain/: RiverGenerator.cpp
docs/World Generation/code/src/Renderer/: BiomeVisualizer.cpp
docs/World Generation/main/: updated_game_design_doc.md  updated_technical_spec.md
docs/World Generation/supporting/: class_diagram.md  process_flow.md  progress_tracking.md  serialization_strategy.md  terrestrial_biomes_and_snow.md  ui_design.md
docs/performance/: LayerOptimizationTesting.md  RenderingOptimizations.md  RenderingTestPlan.md
include/: Camera.h  ConfigManager.h  Entities.h  Entity.h  EntityManager.h  Examples.h  FontRenderer.h  Game.h  InputManager.h  Interface.h  Renderer.h  Shader.h  Tile.h  VectorGraphics.h  VectorRenderer.h  Vertex.h  World.h
include/Rendering/: Layer.h
include/Rendering/Draw/: BorderPosition.h  Rectangle.h
include/Rendering/Shapes/: Circle.h  Line.h  Polygon.h  Rectangle.h  Shape.h  Text.h
include/Rendering/Styles/: Base.h  Border.h  Shape.h
include/World/: TerrainGenerator.h
shaders/: text.frag  text.vert  vector.frag  vector.vert
shaders/Planet/: CrustFragment.glsl  CrustVertex.glsl  PlanetFragment.glsl  PlanetVertex.glsl
src/: Camera.cpp  Camera.h  ConfigManager.cpp  ConfigManager.h  CoordinateSystem.cpp  CoordinateSystem.h  Entities.cpp  Entity.cpp  EntityManager.cpp  Examples.cpp  Examples.h  FontRenderer.cpp  FontRenderer.h  Game.cpp  Game.h  GameState.h  InputManager.cpp  InputManager.h  Interface.cpp  Interface.h  Renderer.cpp  Renderer.h  ScreenManager.cpp  ScreenManager.h  Shader.cpp  Shader.h  Tile.cpp  Tile.h  VectorGraphics.cpp  VectorGraphics.h  VectorRenderer.cpp  VectorRenderer.h  World.cpp  World.h  main.cpp
src/Rendering/: Layer.cpp  Layer.h
src/Rendering/Components/: Button.cpp  Button.h  ButtonStyle.h
src/Rendering/Components/Form/: Text.cpp  Text.h
src/Rendering/Draw/: Circle.cpp  Circle.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h
src/Rendering/Shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Text.cpp  Text.h
src/Rendering/Styles/: Base.cpp  Base.h  Border.cpp  Border.h  Shape.cpp  Shape.h
src/Screens/: DeveloperScreen.cpp  DeveloperScreen.h  GameplayScreen.cpp  GameplayScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h  ScreenManager.cpp  ScreenManager.h  SettingsScreen.cpp  SettingsScreen.h  SplashScreen.cpp  SplashScreen.h  WorldGenScreen.cpp  WorldGenScreen.h
src/Screens/Developer/: Developer.cpp  Developer.h  Examples.cpp  Examples.h
src/Screens/Game/: Entities.cpp  Entities.h  Game.cpp  Game.h  Gameplay.cpp  Gameplay.h  Interface.cpp  Interface.h  Tile.cpp  Tile.h  World.cpp  World.h  WorldOld.cpp  WorldOld.h
src/Screens/Game/Entity/: Entity.cpp  Entity.h
src/Screens/MainMenu/: MainMenu.cpp  MainMenu.h
src/Screens/Settings/: Settings.cpp  Settings.h
src/Screens/Splash/: Splash.cpp  Splash.h
src/Screens/WorldGen/: ProgressTracker.cpp  ProgressTracker.h  Relationships.md  Stars.cpp  Stars.h  TerrainGenerator.cpp  TerrainGenerator.h  WorldGen.cpp  WorldGen.h  WorldGenParameters.h  WorldGenUI.cpp  WorldGenUI.h
src/Screens/WorldGen/Core/: ChunkGenerator.cpp  ChunkGenerator.h  ChunkTypes.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainTypes.h  Util.cpp  Util.h  WorldGenParameters.h
src/Screens/WorldGen/Generators/: Biome.cpp  Biome.h  ContinentalMargin.cpp  ContinentalMargin.h  Generator.cpp  Generator.h  Mountain.cpp  Mountain.h  Plate.cpp  Plate.h  TectonicPlates.cpp  TectonicPlates.h  TerrainGenerator.cpp  TerrainGenerator.h  Tile.cpp  Tile.h  World.cpp  World.h
src/Screens/WorldGen/Lithosphere/: Boundary.cpp  Create.cpp  Lithosphere.cpp  Lithosphere.h  Simulate.cpp
src/Screens/WorldGen/Lithosphere/Crust/: MountainGenerator.cpp  MountainGenerator.h
src/Screens/WorldGen/Lithosphere/Plate/: PlateGenerator.cpp  PlateGenerator.h  TectonicPlate.cpp  TectonicPlate.h
src/Screens/WorldGen/Planet/: GlobeRenderer.cpp  GlobeRenderer.h  PlanetData.cpp  PlanetData.h
src/Screens/WorldGen/Planet/Shaders/: PlanetFragment.glsl  PlanetVertex.glsl
src/Screens/WorldGen/Plate/: Lithosphere.cpp  Lithosphere.h  PlateGenerator.cpp  PlateGenerator.h  PlateRenderer.cpp  PlateRenderer.h  TectonicPlate.cpp  TectonicPlate.h
src/Screens/WorldGen/Plate/Lithosphere/: Boundary.cpp  Create.cpp  Lithosphere.h  Simulate.cpp
src/Screens/WorldGen/Plate/Shaders/: plate.frag
src/Screens/WorldGen/Renderers/: CrustRenderer.cpp  CrustRenderer.h  GlobeRenderer.cpp  GlobeRenderer.h  LandingLocation.cpp  LandingLocation.h  PlanetData.h  PlateRenderer.cpp  PlateRenderer.h  World.cpp  World.h
src/Screens/WorldGen/Renderers/Shaders/: PlanetFragment.glsl  PlanetVertex.glsl
src/Screens/WorldGen/UI/: WorldGenUI.cpp  WorldGenUI.h
src/World/: Entities.cpp  Entities.h  Game.h  TerrainGenerator.cpp
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  main.cpp
tests/Mocks/: MockGL.cpp  MockGL.h
tests/Performance/: RenderBenchmarks.cpp  ScalingTests.cpp  TileCullingTests.cpp  TileTests.cpp
tests/Rendering/: LayerTests.cpp  TileTests.cpp  VectorRendererTests.cpp
(+3 files in other folders)
